--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#D84C7E</color>
+    <color name="colorPrimaryDark">#8c3554</color>
+    <color name="colorAccent">#7dd84c</color>
+    <color name="colorBlack">#000</color>
+    <color name="colorWhite">#fff</color>
+    <color name="colorDarkWhite">#efefef</color>
+    <color name="colorGrey">#444</color>
+    <color name="colorDarkGrey">#232323</color>
+    <color name="colorTransparentBlack">#99000000</color>
 </resources>
