--- a/app/src/main/res/layout/location_item_view.xml
+++ b/app/src/main/res/layout/location_item_view.xml
@@ -11,6 +11,7 @@
     android:clipToPadding="false"
     android:clipChildren="false">
     <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
