add toolbar with animation and load location image in details toolbar header

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorLightGrey">#aeaeae</color>
     <color name="colorDarkGrey">#232323</color>
     <color name="colorTransparentBlack">#99000000</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
