--- a/app/src/main/res/layout/activity_locations_list.xml
+++ b/app/src/main/res/layout/activity_locations_list.xml
@@ -6,4 +6,13 @@
         android:id="@+id/fragment_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/new_location_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_map_marker_plus" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
