--- a/app/src/main/res/layout/location_item_view.xml
+++ b/app/src/main/res/layout/location_item_view.xml
@@ -16,6 +16,9 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
         app:cardElevation="4dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:layout_gravity="center_vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
