--- a/app/src/main/res/layout/location_item_view.xml
+++ b/app/src/main/res/layout/location_item_view.xml
@@ -73,6 +73,17 @@
                     tools:text="Distance" />
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/edit"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:padding="6dp"
+                android:src="@drawable/ic_pencil"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/text_wrapper"
+                app:tint="@color/colorWhite" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
