--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorDarkGrey">#232323</color>
     <color name="colorTransparentBlack">#99000000</color>
     <color name="colorTransparent">#00000000</color>
+    <color name="colorYellow">#FEB83C</color>
 </resources>
